--- a/Client/public/orderDetails.html
+++ b/Client/public/orderDetails.html
@@ -223,9 +223,9 @@
                             </div>
                           </div> -->
                   <div class="form-group row">
-                    <label for="promotionID" class="col-sm-3 col-form-label">Mã khuyến mãi</label>
+                    <label for="promotionID" class="col-sm-3 col-form-label">Tổng Tiền</label>
                     <div class="col-sm-9">
-                      <input type="id" name="promotionID" class="form-control" id="promotionID">
+                      <input type="id" name="promotionID" class="form-control" id="total">
                     </div>
                   </div>
 
@@ -252,9 +252,9 @@
                     <label for="orderState" class="col-sm-3 col-form-label">Trạng thái đơn hàng</label>
                     <div class="col-sm-9">
                       <select name="" id="orderState" style=" width: 150px;">
-                        <option value="Chưa giao">Chưa giao</option>
+                        <option value="Chưa Giao">Chưa Giao</option>
                         <option value="Đã Nhận">Đã Nhận</option>
-                        <option value="Đang giao">Đang giao</option>
+                        <option value="Đang Giao">Đang Giao</option>
                       </select>
                       <!-- <input type="id" name="promotion" class="form-control" id="promotion" placeholder="Nhập mã khuyến mãi"> -->
                     </div>
@@ -354,7 +354,7 @@
   <!-- /////////////////////////////////         -->
   <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="./js//handleManageUser.js"></script>
+  <script src="./js/Admin/updateOrder/handleUpdateOrder.js"></script>
 </body>
 
 </html>
