--- a/Client/public/user.html
+++ b/Client/public/user.html
@@ -183,9 +183,9 @@
                   </select>
 
                 </div> -->
-                <div class="pull-center">
+                <!-- <div class="pull-center">
                   <a href="uploadUser.html" class="btn btn-primary">Thêm</a>
-                </div>
+                </div> -->
                 <!-- <div class="pull-center">
                                       <a href="userDetail.html" class="btn btn-primary">TempDetail</a>
                                   </div>
