--- a/Client/public/order.html
+++ b/Client/public/order.html
@@ -204,9 +204,9 @@
                   </select>
 
                 </div> -->
-                <div class="pull-center">
+                <!-- <div class="pull-center">
                   <a href="uploadOrder.html" class="btn btn-primary">Thêm</a>
-                </div>
+                </div> -->
                 <!-- <div class="pull-center">
                                       <a href="orderDetails.html" class="btn btn-primary">Temp Details</a>
                                   </div>
